use selectRoles(currentRoles) in constructor